<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General strings -->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="app_name">Happen</string>
    <string name="title_section1">Happen</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">News</string>
    <string name="title_section4">My List</string>
    <string name="action_create_event">Add Event</string>
    <string name="action_find_friends">Find Friends</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splashscreen">Welcome to Happen</string>
    <string name="splashscreen_login">Log in</string>
    <string name="splashscreen_signup">SIGN UP</string>
    <string name="me_toos">Me too</string>
    <string name="loading">Loading...</string>
    <string name="delete">Delete</string>

    <!-- Strings related to signup -->
    <string name="prompt_username">Username</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_fname">First name</string>
    <string name="prompt_lname">Last name</string>
    <string name="action_signup">Create account</string>
    <string name="action_take_pic">Take picture</string>
    <string name="action_upload_pic">Upload photo</string>
    <string name="signup_progress_signing_up">Creating account</string>
    <string name="error_mismatch_password">Passwords do not match</string>
    <string name="error_username_taken">Username is already taken</string>
    <string name="error_failed_signup">Unable to create account</string>
    <string name="error_upload_photo">Failed to upload picture</string>
    <string name="exception_message">Error uploading photo</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_number">This phone number is invalid</string>
    <string name="error_incorrect_login">Incorrect login credentials</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to event creation -->
    <string name="prompt_event">Event description</string>
    <string name="prompt_date">When?</string>
    <string name="button_create">Add event</string>
    <string name="error_create_event_failed">Event failed to create</string>
    <string name="event_created">Created new event!</string>

    <!-- Strings related to friend requesting -->
    <string name="prompt_find_friends">Search for friends here</string>
    <string name="button_request">Request friend</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="accept">Yes</string>
    <string name="decline">No</string>
    <string name="no_friends">You have no friends. Add one now!</string>
    <string name="no_requests">You have no requests to display.</string>
    <string name="no_event_feed">There are no events to display.</string>
    <string name="no_my_list">You have no events. Make one now!</string>
    <string name="no_user_list">This friend has no events.</string>
    <string name="no_news">You have no news.</string>
    <string name="add_username">By Username</string>
    <string name="add_contacts">From Contacts</string>
    <string name="add_friend">Add</string>
    <string name="request_sent">Friend request sent!</string>
    <string name="cont_desc">asdf</string>

    <string-array name="date_array">
        <item>today</item>
        <item>tomorrow</item>
        <item>this week</item>
        <item>next week</item>
        <item>this month</item>
        <item>this year</item>
    </string-array>

</resources>
